Bug 61274 - PDF EXPORT Links are off by one page if presentation includes (unexported) hidden slides.
Summary: PDF EXPORT Links are off by one page if presentation includes (unexported) hi...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.0.0 target:6.4.3
Keywords: filter:pdf
: 79593 (view as bug list)
Depends on:
Blocks: PDF-Export
  Show dependency treegraph
 
Reported: 2013-02-22 12:40 UTC by Heinrich Stamerjohanns
Modified: 2020-03-21 14:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file that shows behaviour when exported to PDF (11.76 KB, application/vnd.oasis.opendocument.presentation)
2013-02-22 12:40 UTC, Heinrich Stamerjohanns
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heinrich Stamerjohanns 2013-02-22 12:40:36 UTC
Created attachment 75309 [details]
Sample file that shows behaviour when exported to PDF

When exporting a presentation to PDF, the hyperlinks are off by one page if the document contains a hidden slide which is not exported. 

The attached document contains 4 pages. The second slide is hidden. 
When exporting this document to PDF, the PDF contains 3 pages (as expected).
The hyperlink on the first page works, but the one on the second page does not. 
However this link can be found on the third page (check next to third bullet).

When the second slide is shown at the presentation is exported to PDF. All links are located at the right place.
Comment 1 Joel Madero 2013-02-22 17:06:12 UTC
Version 4.1.0.0.alpha0+ (Build ID: 9601a571d42b0199bdccf2256fc8be82e14af8a)
Date:   Mon Feb 18 23:22:17 2013 +0100
Bodhi Linux 2.2

++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

New (confirmed)
Normal (can prevent high quality work)
Medium (pretty serious for links not to work correctly in pdf export but only happens if you start with a rare case (ie. hiding slides), leaving as medium)
Comment 2 Jean-Baptiste Faure 2014-06-13 10:53:03 UTC
*** Bug 79593 has been marked as a duplicate of this bug. ***
Comment 3 QA Administrators 2015-07-18 17:42:40 UTC Comment hidden (obsolete)
Comment 4 Jean-Baptiste Faure 2015-07-19 10:30:54 UTC
Still reproducible with LO 5.0.1.0.+ built at home under Ubuntu 15.04 x86-64.

Best regards. JBF
Comment 5 QA Administrators 2016-09-20 10:17:53 UTC Comment hidden (obsolete)
Comment 6 Jean-Baptiste Faure 2016-09-25 07:39:37 UTC
Still reproducible in LO 5.2.3.0+ and current master, both built at home under Ubuntu 16.04 x86-64.

Best regards. JBF
Comment 7 QA Administrators 2017-10-30 08:30:30 UTC Comment hidden (obsolete)
Comment 8 Jean-Baptiste Faure 2017-11-01 11:46:39 UTC
Still reproducible in LO 5.4.4.0.+ and current master, both built at home under Ubuntu 16.04 x86-64.

Best regards. JBF
Comment 9 QA Administrators 2018-11-02 03:51:20 UTC Comment hidden (obsolete)
Comment 10 Jean-Baptiste Faure 2018-11-04 14:22:10 UTC
Still reproducible with current master built at home under Ubuntu 18.04 x86-64.

Best regards. JBF
Comment 11 QA Administrators 2019-11-05 03:29:25 UTC Comment hidden (obsolete)
Comment 12 Jean-Baptiste Faure 2019-11-17 11:17:06 UTC
Still reproducible in Version: 6.4.0.0.beta1+
Build ID: e2e7bd4fdf6a6312791318f0687e8d1cfcbb1cbb
Threads CPU : 4; OS : Linux 4.15; UI Render : par défaut; VCL: gtk3; 
Ubuntu_18.04_x86-64
Locale : fr-FR (fr_FR.UTF-8); Langue IHM : fr-FR
Calc: threaded

and version 6.3 as well.

Best regards. JBF
Comment 13 Commit Notification 2020-03-10 19:42:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/01dbb38680aa39a4d3bc7afd05d44a4b2c9bc6ab

tdf#61274 sd PDF export: fix links ending up on wrong pages with hidden slides

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Miklos Vajna 2020-03-11 08:22:59 UTC
I think this is now fixed on master.
Comment 15 Jean-Baptiste Faure 2020-03-15 08:43:38 UTC
Verified fixed in master build at home under Ubuntu 18.04 x86-64 :
Version : 7.0.0.0.alpha0+
Build ID : 87c87b6f8a48bdbee49a50bea2aefa5b934a86f5
Threads CPU : 4; OS : Linux 4.15; UI Render : par défaut; VCL: gtk3; 
Ubuntu_18.04_x86-64
Locale : fr-FR (fr_FR.UTF-8); Langue IHM : fr-FR
Calc: threaded

Thank you very much. Do you plan to backport this fix to 6.4 ?

Best regards. JBF
Comment 16 Miklos Vajna 2020-03-16 08:46:14 UTC
https://gerrit.libreoffice.org/c/core/+/90551
Comment 17 Commit Notification 2020-03-21 14:03:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/d61012dd84dc418c8cd4e90122f431997aafa634

tdf#61274 sd PDF export: fix links ending up on wrong pages with hidden slides

It will be available in 6.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.